src/objects/ProdMaster_Mule__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_point_URL__c</fullName>
        <label>End point URL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>ProdMaster - Mule</label>
</CustomObject>